archive/cluster/apps/default/whoami/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whoami
  name: whoami
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami
