archive/cluster/apps/default/whoami/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: default
  annotations:
    external.home.arpa/enabled: "true"
    auth.home.arpa/enabled: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "whoami.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
